SDK-2327 - [Android] Release v5.6.0