@@ -2,7 +2,6 @@ package com.paydock.core
 
 import android.net.Uri
 import android.util.Log
-import com.paydock.core.extensions.safeCastAs
 import io.mockk.clearAllMocks
 import io.mockk.every
 import io.mockk.mockkStatic
@@ -13,9 +12,8 @@ import org.junit.Rule
 import org.koin.test.KoinTest
 import org.koin.test.mock.MockProviderRule
 import org.mockito.Mockito
+import sun.misc.Unsafe
 import java.lang.reflect.Field
-import java.lang.reflect.Method
-import java.lang.reflect.Modifier
 import java.nio.file.Files
 import java.nio.file.Paths
 
@@ -57,61 +55,44 @@ abstract class BaseUnitTest : KoinTest {
     }
 
     /**
-     * FIXME Static mocking is not working in > Java 17
+     * Overwrites a `static final` field for test purposes (e.g. `Build.VERSION.SDK_INT`).
      *
-     * @sample (Fix for Static Removal)
+     * On JDK 9+, the classic trick of clearing the FINAL bit on `Field`'s own `modifiers`
+     * bookkeeping field via reflection no longer reliably works: that bookkeeping field is
+     * filtered from reflective access on modern JDKs, and even where it can still be located,
+     * the JVM's `Field`/`MethodHandle` accessors (e.g. `jdk.internal.reflect.MethodHandleAccessorFactory`
+     * on JDK 17+) enforce the *actual* static-final-ness of the field independently of that
+     * bookkeeping value. The result is `field.set(null, value)` throwing
+     * `IllegalAccessException: static final field has no write access ... putStatic`
+     * (wrapped in an `InternalError`). No `--add-opens` flag fixes this: it isn't a module
+     * access restriction, it's `MethodHandles.Lookup` refusing to hand out a setter for a
+     * `static final` field belonging to another class, by design (JLS/JVM spec).
      *
-     * var mockedBuildVersion: MockedConstruction<Build.VERSION>
-     * @BeforeTest
-     * fun setUp() {
-     *     // Mock Build.VERSION before each test
-     *     mockedBuildVersion = mockConstruction(
-     *         Build.VERSION::class.java
-     *     ) { _, _ ->
-     *         // this initializer will be called each time during mock creation
-     *         `when`(Build.VERSION.SDK_INT).thenReturn(Build.VERSION_CODES.TIRAMISU)
-     *     }
-     * }
-     *
-     * @AfterTest
-     * fun tearDown() {
-     *     // Close the mock after each test
-     *     mockedBuildVersion.close()
-     * }
+     * `sun.misc.Unsafe` writes directly to the field's memory location instead of going through
+     * `Field`/`MethodHandle` accessors, so it is unaffected by that final-field check and works
+     * consistently across JDK versions.
      */
     fun setStaticFieldViaReflection(field: Field, value: Any) {
         field.isAccessible = true
-        getModifiersField().also {
-            it.isAccessible = true
-            it.set(field, field.modifiers and Modifier.FINAL.inv())
+        val unsafe = unsafeInstance()
+        val base = unsafe.staticFieldBase(field)
+        val offset = unsafe.staticFieldOffset(field)
+        when (value) {
+            is Boolean -> unsafe.putBoolean(base, offset, value)
+            is Byte -> unsafe.putByte(base, offset, value)
+            is Char -> unsafe.putChar(base, offset, value)
+            is Short -> unsafe.putShort(base, offset, value)
+            is Int -> unsafe.putInt(base, offset, value)
+            is Long -> unsafe.putLong(base, offset, value)
+            is Float -> unsafe.putFloat(base, offset, value)
+            is Double -> unsafe.putDouble(base, offset, value)
+            else -> unsafe.putObject(base, offset, value)
         }
-        field.set(null, value)
     }
 
-    @Suppress("NestedBlockDepth")
-    private fun getModifiersField(): Field {
-        return try {
-            Field::class.java.getDeclaredField("modifiers")
-        } catch (e: NoSuchFieldException) {
-            try {
-                val getDeclaredFields0: Method =
-                    Class::class.java.getDeclaredMethod(
-                        "getDeclaredFields0",
-                        Boolean::class.javaPrimitiveType
-                    )
-                getDeclaredFields0.isAccessible = true
-                val fields = getDeclaredFields0.invoke(Field::class.java, false)?.safeCastAs<Array<Field>>()
-                if (!fields.isNullOrEmpty()) {
-                    for (field in fields) {
-                        if ("modifiers" == field.name) {
-                            return field
-                        }
-                    }
-                }
-            } catch (ex: ReflectiveOperationException) {
-                e.addSuppressed(ex)
-            }
-            throw e
-        }
+    private fun unsafeInstance(): Unsafe {
+        val theUnsafeField: Field = Unsafe::class.java.getDeclaredField("theUnsafe")
+        theUnsafeField.isAccessible = true
+        return theUnsafeField.get(null) as Unsafe
     }
 }
